@@ -1,3 +1,15 @@
+2006-12-01  Roman Schindlauer  <roman@kr.tuwien.ac.at>
+
+	* README: Added dependency information.
+
+	* configure.ac: Added check for boost/ptr_container headers.
+
+	* include/dlvhex/AtomNode.h: Documentation.
+	* include/dlvhex/PluginInterface.h: Likewise.
+
+	* src/dlvhex/SafetyChecker.cpp (SafetyCheckerBase), (throw): Modified
+	verbose output.
+
 2006-11-28  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* src/dlvhex/AtomNode.cpp (AtomNode::getRules): Update
